testsuite/poke.cmd/set-error-on-warning-diag.pk
/* { dg-do compile } */
/* { dg-options {-c ".set error-on-warning yes"} } */

type Foo =
  union
  {
    int i;
    long l; /* { dg-error "unreachable" } */
  };
